[gd_scene load_steps=8 format=2]

[ext_resource path="res://material/SpeakerGlow.tres" type="Material" id=1]
[ext_resource path="res://scene/Speaker.gd" type="Script" id=2]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="BoxShape" id=3]

[sub_resource type="CylinderMesh" id=4]

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0.384314, 0.384314, 0.384314, 1 )

[node name="Speaker" type="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1.80221, 0, 0, 0, 1, 0, 1.793, 0 )
script = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 3 )

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( 0.5, 0, -4.44089e-16, 0, -2.18557e-08, -0.278856, 0, 0.5, -1.21892e-08, 0.0356488, 0.467794, 0.609734 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="GlowSmall" type="MeshInstance" parent="."]
transform = Transform( 0.554622, 0, 0, 0, -2.18557e-08, -0.30932, 0, 0.5, -1.35208e-08, 0.0356488, 0.467794, 0.56281 )
mesh = SubResource( 4 )
material/0 = ExtResource( 1 )

[node name="OmniLight" type="SpotLight" parent="GlowSmall"]
transform = Transform( 1.80303, 0, 0, 0, 0.118624, -1.99648, 0, 1.7907, 0.106397, 0, -2.768, 0 )
light_color = Color( 0.501961, 0.0666667, 0.560784, 1 )
light_energy = 8.0
spot_range = 16.8654
spot_angle = 10.5911

[node name="MeshInstance3" type="MeshInstance" parent="."]
transform = Transform( 0.644539, 0, 4.44089e-16, 0, -2.81737e-08, -0.359467, 0, 0.644539, -1.57128e-08, 0.0356493, -0.36097, 0.496025 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="GlowBig" type="MeshInstance" parent="."]
transform = Transform( 0.734955, 0, 0, 0, -2.81737e-08, -0.409893, 0, 0.644539, -1.7917e-08, 0.0356493, -0.36097, 0.422432 )
mesh = SubResource( 4 )
material/0 = ExtResource( 1 )

[node name="OmniLight" type="SpotLight" parent="GlowBig"]
transform = Transform( 1.36063, 0, 0, 0, 0.0920222, -1.54876, 0, 1.35132, 0.0802909, 0, -1.85217, -0.0474786 )
light_color = Color( 0.501961, 0.0666667, 0.560784, 1 )
light_energy = 8.0
spot_range = 16.6551
spot_angle = 26.1506
